# blinmaker-cli

./: Cargo.toml
src/: main.rs
